Removed required fields from swagger definition
