# swagger/index.yaml
@@ -46,8 +46,6 @@ definitions:
   # Default Error
   error:
     type: object
-    required:
-      - message
     properties:
       message:
         type: string
@@ -61,8 +59,6 @@ definitions:
 
   Mock:
     type: object
-    required:
-      - key
     properties:
       key:
         type: string
@@ -113,8 +109,6 @@ definitions:
     
   ExpectKafka:
     type: object
-    required:
-      - topic
     properties:
       topic:
         type: string
@@ -122,10 +116,6 @@ definitions:
   
   ExpectAMQP:
     type: object
-    required:
-      - exchange
-      - routing_key
-      - queue
     properties: 
       exchange:
         type: string 
@@ -139,9 +129,6 @@ definitions:
   
   ExpectHTTP:
     type: object
-    required: 
-      - method
-      - path
     properties: 
       method:
         type: string
@@ -187,9 +174,6 @@ definitions:
   ActionSendHTTP:
     type: object
     description: Send a HTTP message as an action
-    required: 
-      - url
-      - method
     properties: 
       url:
         type: string
@@ -238,9 +222,6 @@ definitions:
   ActionPublishAMQP:
     type: object
     description: publish a message on AMQP if this behaviors condition is met
-    required: 
-      - exchange
-      - routing_key
     properties:
       exchange: 
         type: string
@@ -258,8 +239,6 @@ definitions:
   ActionPublishKafka:
     type: object
     description: publish a message on kafka
-    required:
-      - topic
     properties: 
       topic:
         type: string
@@ -274,8 +253,6 @@ definitions:
   ActionSleep:
     type: object
     description: pause the action thread for a time
-    required:
-      - duration
     properties:
       duration:
         type: string
